syntax = "proto2";

package scala.protos;


option java_multiple_files = true;

message Data {
    required string key = 1;
    required string value = 2;
}

message DataSet{
    repeated Data data = 1;
}


service Greeter {
    rpc sendData (DataRequest) returns (DataReply) {}
}

message DataRequest {
    required DataSet dataSet = 1;
}

message DataReply {
    required string reply = 1;
}